<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:id="@+id/llGetInfo"
    android:layout_marginBottom="30dp"
    tools:context=".Activity2_Video">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Q2"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="25dp"
        />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="315dp"
        android:layout_height="117dp"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_s_the_name_of_that_person"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="25dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/charles_oliveira"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_a"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connor"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_b"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tony"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_c"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alex_pereira"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_d"
        />

</LinearLayout>
