<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:id="@+id/llGetInfo"
    tools:context=".Activity1_CS">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Q1"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="25dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/turing_machine_concepts_were_introduced_by"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="25dp"
        />
<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        >-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:hint="Enter your good name"-->
<!--            android:id="@+id/etName"-->
<!--            />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        >-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:hint="Enter your ID"-->
<!--            android:id="@+id/etId"-->
<!--            />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_chandler"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_a"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b_alan_turing"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_b"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_dijkstra"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_c"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d_talha_khalid"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_d"
        />
<!--    <Button-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="CANCEL"-->
<!--        android:id="@+id/btnCancel"-->
<!--        />-->

</LinearLayout>