<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:id="@+id/llGetInfo"
    tools:context=".Activity2_CS">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Q2"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="25dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/which_python_library_is_used_for_speech_to_text_and_text_to_speech"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="25dp"
        />
    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        >-->

    <!--        <com.google.android.material.textfield.TextInputEditText-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:hint="Enter your good name"-->
    <!--            android:id="@+id/etName"-->
    <!--            />-->

    <!--    </com.google.android.material.textfield.TextInputLayout>-->

    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        >-->

    <!--        <com.google.android.material.textfield.TextInputEditText-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:hint="Enter your ID"-->
    <!--            android:id="@+id/etId"-->
    <!--            />-->

    <!--    </com.google.android.material.textfield.TextInputLayout>-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_opencv"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_a"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b_tensorflow"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_b"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pyttsx3"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_c"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/d_all_of_the_above"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_d"
        />
    <!--    <Button-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="CANCEL"-->
    <!--        android:id="@+id/btnCancel"-->
    <!--        />-->

</LinearLayout>